--- a/component/screen/ListTicket/ListTicket.css
+++ b/component/screen/ListTicket/ListTicket.css
@@ -64,9 +64,9 @@
 .ListTicker-tab-allTicker-body{
    
     display: grid;
-    grid-template-columns: auto auto ;
-    margin: 0 15%;
-    grid-column-gap: 80px;
+    grid-template-columns: 600px 600px ;
+    justify-content: center;
+    grid-column-gap: 50px;
     grid-row-gap: 30px;
    
     
